# SIM_MedicalDatabase

./: .gitignore  CMakeLists.txt  DOKUMENTACJA.md  README.md  main.cpp  start_baza.bat
data/CT-00000/: image-00000.dcm  image-00001.dcm
